# historico-clinico-integrado

./: .kubernetes.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild-training.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test.sh
.github/workflows/: api.yaml  auto-approve-dev-pr.yaml  docs.yaml  lib-docs.yaml  lib-lint.yaml  lib-tests.yaml  lint.yaml  tests.yaml
api/: .gitignore  .kubernetes.yaml  Dockerfile  README.md  compose-entrypoint.sh  docker-compose.yaml  kustomization.yaml  pyproject.toml  test.ps1  test.sh
api/app/: datalake.py  db.py  dependencies.py  enums.py  main.py  models.py  pydantic_models.py  utils.py  validators.py
api/app/config/: __init__.py  base.py  dev.py  prod.py
api/app/datalake/: formatters.py  models.py
api/app/models/: enums.py  mrg.py  raw.py  std.py
api/app/routers/: auth.py  entities.py  entities_mrg.py  entities_raw.py  entities_std.py  misc.py  patients.py  users.py
api/data/: brasil_estados_municipios.csv  cid_subcategorias.csv  conditioncode.csv  country.csv  datasource.csv  datasources.csv  meta.json  nationality.csv  ocupacao_cbo.csv  ocupacao_familias.csv  paises.csv
api/datalake/: __init__.py  formatters.py  models.py  uploader.py  utils.py
api/migrations/app/: 0_20231208171025_init.py  0_20240110065914_init.py  0_20240110165756_init.py  0_20240116094530_init.py  0_20240116134526_init.py  0_20240116142415_init.py  0_20240116165128_init.py  0_20240117135339_init.py  0_20240117155715_init.py  0_20240117183834_init.py  0_20240119093053_init.py  0_20240311081447_init.py  10_20240411140000_update.py  11_20240411171421_update.py  12_20240415172345_update.py  13_20240415172542_update.py  14_20240507163755_update.py  16_20240614144952_update.py  17_20240624170326_update.py  17_20240624185604_update.py  18_20240624191424_update.py  19_20240708142702_update.py  1_20231208183443_update.py  1_20240110093956_update.py  1_20240111112636_update.py  1_20240118155333_update.py  1_20240227131336_update.py  1_20240327161051_update.py  21_20240708152253_update.py  22_20240709095718_update.py  23_20240722102840_update.py  2_20240110111925_update.py  2_20240110160000_update.py  2_20240118161630_update.py  2_20240227172416_update.py  2_20240401095822_update.py  3_20240115173625_update.py  3_20240118161752_update.py  3_20240408171102_update.py  4_20240410105945_update.py  (+4 more)
api/scripts/: create_user.py  database_cleanup.py  database_init_table.py  database_initial_data.py
api/tests/: conftest.py  test_main.py  test_mrg.py  test_raw.py  test_std.py  utils.py
app/: decorators.py  dependencies.py  enums.py  lifespan.py  main.py  models.py  pydantic_models.py  security.py  utils.py  validators.py
app/auth/enums/: __init__.py
app/auth/routers/: __init__.py  basic.py  default.py  email.py  govbr.py  totp.py
app/auth/types/: __init__.py  email.py  totp.py
app/auth/utils/: __init__.py  email.py  govbr.py  totp.py
app/config/: __init__.py  base.py  dev.py  prod.py
app/datalake/: __init__.py  formatters.py  models.py  uploader.py  utils.py
app/routers/: auth.py  entities.py  entities_mrg.py  entities_raw.py  entities_std.py  frontend.py  misc.py  vitacare.py
app/types/: __init__.py  errors.py  frontend.py  pydantic_models.py
data/: city.csv  datasource.csv  gender.csv  meta.json  permition.csv  race.csv  state.csv  systemrole.csv
fhir_utils/: __init__.py  conf.py  healthcare_api.py  utils.py
k8s/prod/: resources.yaml
k8s/staging/: resources.yaml
k8s/training/: resources.yaml
lib/: pyproject.toml
lib/fhir_utils/: version.py
lib/scripts/: docs.py
migrations/app/: 10_20240411140000_update.py  15_20240606152620_update.py  20_20240708144217_update.py  24_20240729180738_update.py  25_20240816161616_update.py  26_20240819161328_update.py  27_20240830145823_update.py  28_20240830163720_update.py  29_20240830164032_update.py  30_20240830164307_update.py  31_20240912145353_update.py  32_20240918111527_update.py  32_20240918162303_update.py  32_20240919113949_update.py  33_20240919085908_update.py  33_20240924164833_update.py  34_20240919092703_update.py  34_20241002133921_update.py  35_20241029140029_update.py  36_20250311200934_update.py  37_20250326210155_update.py  37_20250326212149_update.py  5_20240410110729_update.py
scripts/: create_user.py  database_cleanup.py  database_init_table.py
tests/: conftest.py  test_frontend.py  test_raw.py
