[project]
name = "app"
version = "0.1.0"
description = "API for FHIR Utils"
authors = [{ name = "Escritório de Dados", email = "escritoriodedados@gmail.com" }]
requires-python = "~=3.11"
license = "MIT"
keywords = [
    "fhir",
    "utilities",
    "data",
    "health",
    "government",
]
dependencies = [
    "aerich>=0.7.2,<0.8",
    "aioredis>=2.0.1,<3",
    "bcrypt<4.1",
    "fastapi==0.109.2",
    "loguru>=0.7.0,<0.8",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart==0.0.7",
    "sentry-sdk[fastapi]>=1.37.1,<2",
    "tortoise-orm[asyncpg]==0.19.3",
    "uvicorn[standard]>=0.24.0.post1,<0.25",
    "httpx>=0.26.0,<0.27",
    "pytest>=7.4.4,<8",
    "infisical==1.5.0",
    "pandas>=2.1.4,<3",
    "validate-docbr>=1.10.0,<2",
    "pyjwt>=2.8.0,<3",
    "urllib3==2.0.7",
    "idna==3.7",
    "basedosdados>=2.0.0b16,<3",
    "nltk>=3.9.1,<4",
    "asyncer>=0.0.8,<0.0.9",
    "qrcode>=7.4.2,<8",
    "pyotp>=2.9.0,<3",
    "fastapi-simple-rate-limiter>=0.0.4,<0.0.5",
    "fastapi-limiter>=0.1.6,<0.2",
    "asgi-lifespan>=2.1.0,<3",
    "google-cloud-bigquery>=3.26.0,<4",
    "asyncify>=0.10.0,<0.11",
    "cryptography>=44.0.0,<45",
]

[project.urls]
Homepage = "https://github.com/prefeitura-rio/fhir-utils"
Repository = "https://github.com/prefeitura-rio/fhir-utils"

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "flake8>=6.1.0,<7",
    "pre-commit>=3.5.0,<4",
    "pytest-asyncio>=0.21.1,<0.22",
    "taskipy>=1.12.2,<2",
    "isort>=5.12.0,<6",
    "pytest-cov>=4.1.0,<5",
    "pytest-ordering>=0.6,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["app/config/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox", ".eggs", "scripts"]
addopts = ["--doctest-modules", "--cov=app", "-ra", "-v"]

[tool.taskipy.tasks]
create_user = "python scripts/create_user.py"
lint = "black . && isort . && flake8 ."
serve = "uvicorn app.main:app --reload --port 8001"
test = "pytest"
