[tool.poetry]
name = "fhir-utils"
version = "0.0.1a0"
description = "Utilities for handling FHIR data."
authors = ["Escritório de Dados <escritoriodedados@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/prefeitura-rio/fhir-utils"
repository = "https://github.com/prefeitura-rio/fhir-utils"
keywords = ["fhir", "utilities", "data", "health", "government"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = ">=0.6"
xmltodict = "^0.13.0"
google-api-python-client = "^2.95.0"

[tool.poetry.scripts]
docs = "scripts.docs:main"
lint = "scripts.lint:main"
test = "scripts.test:main"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"
mako = "^1.2.4"
markdown = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
